--- a/.github/workflows/build-libsodium.yml
+++ b/.github/workflows/build-libsodium.yml
@@ -16,12 +16,21 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-latest
-            arch: arm64
-            triplet: darwin-arm64
-          - os: macos-latest
-            arch: amd64
-            triplet: darwin-amd64
+        - os: ubuntu-latest
+          arch: amd64
+          triplet: x86_64-unknown-linux-gnu
+        - os: ubuntu-latest
+          arch: arm64
+          triplet: aarch64-unknown-linux-gnu
+        - os: macos-latest
+          arch: amd64
+          triplet: x86_64-apple-darwin
+        - os: macos-latest
+          arch: arm64
+          triplet: arm64-apple-darwin
+        - os: windows-latest
+          arch: amd64
+          triplet: x86_64-w64-mingw32
 
     runs-on: ${{ matrix.os }}
     defaults:
@@ -33,31 +42,46 @@ jobs:
         with:
           submodules: true   # pull in libsodium submodule
 
-      - name: Install build deps (macOS)
+      - name: install build deps (linux)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y build-essential autoconf automake libtool
+
+      - name: install build deps (macos)
         if: runner.os == 'macOS'
         run: brew install autoconf automake libtool
 
-      - name: Configure & build (macOS)
+      - name: install build deps (windows)
+        if: runner.os == 'Windows'
+        uses: lukka/get-cmake@latest
+
+      - name: configure & build (linux)
+        if: runner.os == 'Linux'
+        run: |
+          cd libsodium
+          ./autogen.sh || true
+          ./configure --disable-shared --enable-static --host=${{ matrix.triplet }} --prefix=$PWD/dist
+          make -j$(nproc || sysctl -n hw.ncpu)
+          make install
+
+      - name: configure & build (macos)
         if: runner.os == 'macOS'
         run: |
           export CFLAGS="-mmacosx-version-min=13.0"
           export LDFLAGS="-mmacosx-version-min=13.0"
           cd libsodium
           ./autogen.sh || true
-          ./configure --disable-shared --enable-static --host=${{ matrix.arch }}-unknown-linux-gnu --prefix=$PWD/dist
+          ./configure --disable-shared --enable-static --host=${{ matrix.triplet }} --prefix=$PWD/dist
           make -j$(nproc || sysctl -n hw.ncpu)
           make install
 
-      - name: Configure & Build (Unix)
-        if: runner.os == 'Linux'
+      - name: configure & build (Windows)
+        if: runner.os == 'Windows'
         run: |
           cd libsodium
-          ./autogen.sh || true
-          ./configure --disable-shared --enable-static --host=${{ matrix.arch }}-unknown-linux-gnu --prefix=$PWD/dist
-          make -j$(nproc || sysctl -n hw.ncpu)
-          make install
+          cmake -S . -B build -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX=dist
+          cmake --build build --config Release --target install
 
-      - name: Copy artifact
+      - name: copy artifact
         run: |
           mkdir -p prebuilt/${{ matrix.triplet }}
           if [ "${{ runner.os }}" == "Windows" ]; then
