--- a/.github/workflows/build-libsodium.yml
+++ b/.github/workflows/build-libsodium.yml
@@ -50,10 +50,6 @@ jobs:
         if: runner.os == 'macOS'
         run: brew install autoconf automake libtool
 
-      - name: install build deps (windows)
-        if: runner.os == 'Windows'
-        uses: lukka/get-cmake@latest
-
       - name: configure & build (linux)
         if: runner.os == 'Linux'
         run: |
@@ -77,20 +73,36 @@ jobs:
       - name: configure & build (Windows)
         if: runner.os == 'Windows'
         run: |
-          cd libsodium
-          cmake -S . -B build -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX=dist
-          cmake --build build --config Release --target install
+          cd libsodium/builds/msvc
+          msbuild libsodium.sln /p:Configuration=Release /p:Platform=x64
 
-      - name: copy artifact
+      - name: copy artifact (linux/macos)
         run: |
           mkdir -p prebuilt/${{ matrix.triplet }}
-          if [ "${{ runner.os }}" == "Windows" ]; then
-            cp libsodium/dist/lib/libsodium.a prebuilt/${{ matrix.triplet }}/libsodium.lib || true
-          else
-            cp libsodium/dist/lib/libsodium.a prebuilt/${{ matrix.triplet }}/
-          fi
+          cp libsodium/dist/lib/libsodium.a prebuilt/${{ matrix.triplet }}/
 
+      - name: copy artifact (windows)
+        if: runner.os == 'Windows'
+        run: |
+          mkdir -p prebuilt/x86_64-w64-mingw32
+          cp "libsodium/bin/x64/Release/v142/static/libsodium.lib" prebuilt/x86_64-w64-mingw32/
+
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.triplet }}
+          path: prebuilt/${{ matrix.triplet }}
+
+  commit:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: prebuilt
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "chore: update libsodium prebuilt for ${{ matrix.triplet }}"
+          commit_message: "chore: update libsodium prebuilts"
           file_pattern: prebuilt/**
