--- a/.github/workflows/build-libsodium.yml
+++ b/.github/workflows/build-libsodium.yml
@@ -50,6 +50,10 @@ jobs:
         if: runner.os == 'macOS'
         run: brew install autoconf automake libtool
 
+      - name: install build deps (windows)
+        if: runner.os == 'Windows'
+        uses: microsoft/setup-msbuild@v1.3
+
       - name: configure & build (linux)
         if: runner.os == 'Linux'
         run: |
